Fixed horizontal scroll

--- a/microsite/www/css/styles-history.css
+++ b/microsite/www/css/styles-history.css
@@ -1,7 +1,7 @@
 body {
   width: fit-content;
 }
-.page {
+/* .page {
   margin: auto;
   width: 100%;
-}
+} */
