--- a/microsite/www/css/styles.css
+++ b/microsite/www/css/styles.css
@@ -1,3 +1,7 @@
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   background-color: #eedfe0;
   font-size: 10px;
@@ -57,7 +61,7 @@ body {
 .links {
   display: inline-block;
   width: 100%;
-  padding: 30px 0% 30px 20%;
+  padding: 30px 0% 30px 15%;
   font-size: 0.55rem;
 }
 .links a {
@@ -76,7 +80,9 @@ body {
   transition: border-bottom 1s, color 0.5s, translate 0.4s;
   transition-timing-function: ease-out 1s;
 }
-
+.page {
+  margin: 30px 10% 50px 10%;
+}
 h1 {
   font-family: "Questrial";
   font-style: normal;
@@ -93,4 +99,14 @@ h3 {
   font-family: "Red Rose";
   font-style: normal;
   font-weight: 400;
+}
+
+footer {
+  background-color: #d3acb3;
+  height: 70px;
+  /* width: 100%; */
+  font-family: "Red Rose";
+  font-style: normal;
+  font-size: 8px;
+  padding: 10% 5% 10% 5%;
 }
